# rust-stonk

./: .gitignore  README.md
.github/workflows/: node.js.yml  rust.yml
electric-stonk/: package-lock.json  package.json
electric-stonk/src/: App.css  App.test.tsx  App.tsx  MainPage.css  MainPage.test.tsx  MainPage.tsx  StonkPage.css  StonkPage.tsx  index.tsx  main.tsx  stonk.ts
rust-stonk/: Cargo.toml
rust-stonk/src/: lib.rs  main.rs
rust-stonk/src/database/: database.rs
rust-stonk/src/datatypes/: api_stonk.rs  client.rs  mod.rs  stonk.rs
rust-stonk/src/files/: mod.rs  stonkreader.rs  stonksaver.rs
rust-stonk/src/stonk_finder/: mod.rs  stonk_finder.rs
rust-stonk/src/websocket/: handlers.rs  ws.rs
rust-stonk/tests/: test_stockfinder.rs
rusty-stonk/: .gitignore  package-lock.json  package.json
