[package]
name = "rust-stonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]

[dependencies]
yahoo_finance_api = "1.2.2"
chrono = "0.4.19"
tokio = { version = "1.15.0", features = ["full"] }
serde_json = "1.0.73"
serde = "1.0.73"
warp = "0.3.2"
